* Will no longer place the Bulky Vendors that automatically disappear

4.0.4
Fixes
* Updated locations to ignore some boss spawns that don't get used (b_99) but end up causing problems in Wild mode
* Minor logic adjustments for softlock prevention purposes
* Changed name of "Include more locations" option to "Allow more annoying replacements" to be more obvious about what the option does
* Discovered an issue where in some locations and some bosses entering the room while in Limit form will result in a crash. This has been observed for Hydra and The Experiment, and it is unclear how extensive the issue is, and a fix is not obvious. This has been noted on the KNOWN_ISSUES page, and some bosses have been marked as a gimmick in the struggle fights (which is the set of locations where you are most likely to enter while in limit form)

4.0.3

Fixes
* Made improvements to Revenge Limit Rando to only randomize the revenge limit of enemies/bosses that specifically have a Karma limit set in their AI.
* Issue of infinite loading on entering Hades I fight has been fixed.
* Undead Pirate (Rifle) should now be damageable when other enemies are randomized.
* Atlantica cutscenes are no longer removed when cutscene removal is turned on.
* The Jafar spawn locations have been fixed so that bosses walk on invisible ground instead of falling infinitely.
* Fixed issue with Timeless River variant of Minute Bombs not having explosion properly disabled
* When HP Scaling is turned off, Sephiroth and Prison Keepers base HP is set to 1878 in order to not crash when viewing with Scan on a high battle level

New things
* Forced variations are possible, so in some locations Pete will always be the cups version of Pete, due to the Timeless River version not working in that location.
* Misc bosses option has been removed, and MCP/Shadow Stalker/Oogie boogie have been removed from the pool completely, and there are no plans to ever randomize these "gimmick/minigame" bosses.