@@ -354,7 +354,7 @@ Gargoyle Knight:
   enmp_index: 999
   model: M_BB010_SWORD
   obj_id: 367
-  sizeTag: memorySmall
+  sizeTag: memoryLarge
   type: enemy
   isnightmare: true
   variations:
@@ -384,7 +384,7 @@ Gargoyle Warrior:
   model: M_BB010_AX
   obj_id: 368
   isnightmare: true
-  sizeTag: memorySmall
+  sizeTag: memoryLarge
   type: enemy
   variations:
     Gargoyle Warrior (40 0):
